<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/lat"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:maxLines="3"
        />
    <TextView
        android:id="@+id/lng"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lat"
...
