...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="Favorite Songs"
        app:layout_constraintStart_toEndOf="@+id/button"
...
